Fix mobile homepage overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,11 @@
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
 @font-face {
 	font-family: 'Atkinson';
 	src: url('/fonts/atkinson-regular.woff') format('woff');
@@ -39,6 +44,7 @@ body {
 	background-size: 100% 600px;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
+	overflow-x: hidden;
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
 	line-height: 1.7;
